--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,24 @@
 [versions]
 agp = "8.13.0-alpha02"
-kotlin = "2.0.21"
+kotlin = "2.2.0"
 coreKtx = "1.16.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
-composeBom = "2024.09.00"
+composeBom = "2025.07.00"
+appcompat = "1.7.1"
+material = "1.12.0"
+
+daggerHiltVersion = "2.57"
+daggerHiltNavigationComposeVersion = "1.2.0"
+navigationVersion = "2.9.3"
+coroutinesVersion = "1.10.2"
+lifecycleVersion = "2.9.2"
+roomVersion = "2.7.2"
+lottieVersion = "6.6.7"
+systemUiControllerVersion = "0.36.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -24,9 +35,39 @@ androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "u
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+
+# Dagger Hilt
+daggerHilt = { group = "com.google.dagger" , name = "hilt-android" , version.ref = "daggerHiltVersion" }
+daggerHiltNavigationCompose = { group = "androidx.hilt" ,name  = "hilt-navigation-compose" , version.ref = "daggerHiltNavigationComposeVersion"}
+daggerHiltCompiler = { group = "com.google.dagger" , name = "hilt-compiler" , version.ref = "daggerHiltVersion" }
+
+# Room SQLite
+room = { group = "androidx.room" , name = "room-runtime" , version.ref = "roomVersion" }
+roomCompiler = { group = "androidx.room" , name = "room-compiler" , version.ref = "roomVersion" }
+roomCoroutinesSupport = { group = "androidx.room" , name = "room-ktx" , version.ref = "roomVersion" }
+
+# Navigation compose
+navigation = { group = "androidx.navigation" , name = "navigation-compose" , version.ref = "navigationVersion" }
+
+# Coroutines & lifecycle
+kotlinCoroutines = { group = "org.jetbrains.kotlinx" , name = "kotlinx-coroutines-android" , version.ref = "coroutinesVersion" }
+viewModel = { group = "androidx.lifecycle" , name = "lifecycle-viewmodel-ktx" , version.ref = "lifecycleVersion" }
+viewModelForCompose = { group = "androidx.lifecycle" , name = "lifecycle-viewmodel-compose" , version.ref = "lifecycleVersion" }
+lifecycleCompose = { group = "androidx.lifecycle" , name = "lifecycle-runtime-compose" , version.ref = "lifecycleVersion" }
+savedState = { group = "androidx.lifecycle" , name = "lifecycle-viewmodel-savedstate" , version.ref = "lifecycleVersion" }
+
+# Lottie animations
+lottieanimations = {group = "com.airbnb.android",name = "lottie-compose",version.ref = "lottieVersion"}
+
+# SystemUiController
+systemUiController = { group = "com.google.accompanist" , name = "accompanist-systemuicontroller" , version.ref = "systemUiControllerVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 
+daggerHiltPlugin = { id = "com.google.dagger.hilt.android" , version.ref = "daggerHiltVersion" }
